apps/traefik-dashboard/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: traefik-dashboard-redirect
    namespace: traefik
spec:
    redirectRegex:
        regex: ^(https?://[^/]+)/?$
        replacement: ${1}/dashboard/
        permanent: false
